--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,37 +1,19 @@
-.container {
-    display: flex;
-    justify-content: center;
+body {
+    margin: 0;
+    background-color: black;
 }
 
-
-.grid {
-    width: 200px;
-    height: 400px;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: yellow;
+#root {
+    padding: 3rem;
+    text-align: center
 }
 
-.grid div {
-    height: 20px;
-    width: 20px;
+#root h1 {
+    font-family: 'Press Start 2P', Consolas, monospace;
+    color: white;
 }
 
-.tetromino {
-    background-color: blue;
-}
-
-
-.mini-grid {
-    margin-left: 50px;
-    width: 80px;
-    height: 80px;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: yellow;
-}
-
-.mini-grid div {
-    height: 20px;
-    width: 20px;
+#root canvas {
+    display: block;
+    margin: 0 auto;
 }
